<resources>
    <string name="app_name">猜數字遊戲</string>
    <string name="guess_number">請選擇猜測的數字數量</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="new_game">新遊戲</string>
    <string name="go_home">回首頁</string>
</resources>
